[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.50.0",
    "streamlit-autorefresh>=1.0.1",
    "yfinance>=1.2.0",
    "ib_insync>=0.9.86",
]
